--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NewYorkTimesSearch</string>
-    <string name="title_activity_search">News Article Search</string>
+    <string name="title_activity_search">Article Search</string>
     <string name="action_settings">Settings</string>
     <string name="search">Search</string>
     <string name="search_hint">Enter search keyword</string>
@@ -21,7 +21,7 @@
         <item>Newest</item>
         <item>Oldest</item>
     </string-array>
-    <string name="title_activity_article">Read More..</string>
+    <string name="title_activity_article">More Details...</string>
     <string name="share_text">Share</string>
 
 </resources>
